Fix path to requirements in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install -r /data-tools/requirements.txt
+        pip install -r data-tools/requirements.txt
         
     - name: Update data
       run: |
