--- a/website-source/tsconfig.json
+++ b/website-source/tsconfig.json
@@ -11,7 +11,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "rollup/parseAst": ["./node_modules/rollup/dist/parseAst.d.ts"]
     }
   }
 }
