Fix data download paths and use pnpm for build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,9 @@ jobs:
       run: |
         cd website-source
         rm -rf node_modules package-lock.json
-        npm install
-        npm run build
+        corepack enable
+        pnpm install
+        pnpm run build
         cp -r dist/* ../website/
         
     - name: Deploy to GitHub Pages
