--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
         cd website-source
         rm -rf node_modules package-lock.json
         npm install
+        npm install # rerun due to optional dependency bug
         npm run build
         cp -r dist/* ../website/
         
