fix: update tsconfig for rollup types

--- a/website-source/tsconfig.node.json
+++ b/website-source/tsconfig.node.json
@@ -2,8 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "Node16",
+    "moduleResolution": "node16",
     "types": ["node"],
     "esModuleInterop": true
   },
